# OpenGL-training

./: CMakeLists.txt  Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  README.md  ShaderProgram.h  filysystem.h  instanced.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  root_directory.h  skybox.h  texture.cpp  texture.h
shaders/: frag_instanced.glsl  frag_light.glsl  frag_models.glsl  frag_quad.glsl  frag_skybox.glsl  frag_texture.glsl  vertex_instanced.glsl  vertex_models.glsl  vertex_quad.glsl  vertex_skybox.glsl  vertex_texture.glsl
